<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:icon="@drawable/ic_baseline_share_24"
        />

    <item
        android:id="@+id/submenu_advanced"
        android:title="@string/menu_advanced">
        <menu>
            <item
                android:id="@+id/tilecache_capacity_factor"
                android:title="@string/tilecache_capacity_factor"
                />

        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/map_info"
        android:title="@string/map_info_menu"
        android:icon="@drawable/ic_info_gray_24px"/>

</menu>
