<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo_description"
        android:src="@drawable/ic_logo_color_24dp" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="10sp"
        android:layout_toEndOf="@+id/app_logo"
        android:linksClickable="true"
        android:text="@string/app_name_info_screen"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="20sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/offline_version_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:visibility="gone"
                android:text="@string/offline_version_info" />

            <TextView
                android:id="@+id/usage_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:linksClickable="true"
                android:text="@string/usage_info" />

            <TextView
                android:id="@+id/osm_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:linksClickable="true"
                android:text="@string/osm_info" />

            <TextView
                android:id="@+id/consider_offline_maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:linksClickable="true"
                android:text="@string/consider_offline_maps" />

            <TextView
                android:id="@+id/offline_maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:linksClickable="true"
                android:text="@string/offline_maps" />

            <TextView
                android:id="@+id/map_theme_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:linksClickable="true"
                android:text="@string/map_theme_info" />

            <TextView
                android:id="@+id/offline_map_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:linksClickable="true"
                android:text="@string/offline_map_info" />

            <TextView
                android:id="@+id/manual_offline_map_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:linksClickable="true"
                android:text="@string/manual_offline_map_info" />

            <TextView
                android:id="@+id/version_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp" />

            <ImageButton
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginTop="10sp"
                android:contentDescription="@string/action_settings"
                android:id="@+id/settings_btn"
                android:background="@drawable/baseline_settings_24"
                android:backgroundTint="@color/material_on_surface_emphasis_medium"
                android:onClick="openSettings" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>